--- a/Exercise_162_Python.ipynb
+++ b/Exercise_162_Python.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Exercise-162-Python.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOhI+TUQ9BcxTpr4lgHevUO",
+      "authorship_tag": "ABX9TyMprDajugEGHAymF044s7Oo",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -191,7 +191,7 @@
         "print(hesapla)\n",
         "print(butceTamam)\n"
       ],
-      "execution_count": 99,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -240,9 +240,9 @@
     {
       "cell_type": "code",
       "source": [
-        "urunAdi = \"iPhone 13 128 GB Starlight:\"\n",
+        "urunAdi = \"iPhone 13 Starlight 128 GB:\"\n",
         "urunBedeliDolar = 799\n",
-        "kurDolar = 13.74\n",
+        "kurDolar = 14.06\n",
         "urunAdet = input(\"Ürün adedini giriniz: \")\n",
         "taxVergi = 2212                                                                     \n",
         "butce = 15000\n",
@@ -257,16 +257,16 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "sPq8MDGqilxW",
-        "outputId": "3cc0bd71-fe3a-4168-b9a5-29d159e791ca"
+        "outputId": "a551eb23-02e8-4c81-ad13-4bda7582f0c2"
       },
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "Ürün adedini giriniz: 1\n",
-            "iPhone 13 128 GB Starlight: 13190.26 TL\n",
+            "iPhone 13 Starlight 128 GB: 13445.94 TL\n",
             "Alışveriş bütçeme uygun mu? False\n"
           ]
         }
@@ -287,7 +287,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "M7Kyvvc_lXUg",
-        "outputId": "030a689b-97fb-4bcb-a7a4-4a5adcfeb2ea"
+        "outputId": "e1b66fc4-56de-4588-e274-fbd8ea804472"
       },
       "execution_count": null,
       "outputs": [
@@ -295,10 +295,10 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Enter your username: blondswift\n",
-            "Enter your password: 13\n",
-            "True\n",
-            "True\n"
+            "Enter your username: ljlkjlj\n",
+            "Enter your password: jnjknl\n",
+            "False\n",
+            "False\n"
           ]
         }
       ]
