--- a/proje02.ipynb
+++ b/proje02.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "proje02.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMFaclmAnqMzRX9BzJRSWQB",
+      "authorship_tag": "ABX9TyN5KE40pZrlDnLgsAr/VWlL",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -34,7 +34,7 @@
         "import random\n",
         "import string\n",
         "\n",
-        "words = [\"elma\", \"kedi\", \"sandalye\", \"laptop\", \"pencere\"]\n",
+        "words = [\"elma\", \"kedi\", \"sandalye\", \"laptop\", \"pencere\", \"itibar\", \"perde\"]\n",
         "\n",
         "def oyunaGiriş():\n",
         "\n",
