--- a/proje02.ipynb
+++ b/proje02.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "proje02.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyN5KE40pZrlDnLgsAr/VWlL",
+      "authorship_tag": "ABX9TyO4xATinkvnv1hO0CO1pIAp",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -34,7 +34,7 @@
         "import random\n",
         "import string\n",
         "\n",
-        "words = [\"elma\", \"kedi\", \"sandalye\", \"laptop\", \"pencere\", \"itibar\", \"perde\"]\n",
+        "words = [\"elma\", \"kedi\", \"sandalye\", \"laptop\", \"pencere\", \"itibar\", \"projeksiyon\"]\n",
         "\n",
         "def oyunaGiriş():\n",
         "\n",
@@ -104,9 +104,9 @@
         "\n",
         "    # gets here when len(word_letters) == 0 OR when lives == 0\n",
         "    if lives == 0:\n",
-        "        print('You died, sorry. The word was', word)\n",
+        "        print('Öldünüz, sorry. The word was', word)\n",
         "    else:\n",
-        "        print('YAY! You guessed the word', word, '!!')\n",
+        "        print('Bravo! You guessed the word', word, '!!')\n",
         "\n",
         "oyunaGiriş()\n",
         "selamlama()\n",
@@ -121,7 +121,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "metadata": {
         "id": "pTCbnoTZ5S1Y"
       },
