--- a/proje02.ipynb
+++ b/proje02.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "proje02.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyO4xATinkvnv1hO0CO1pIAp",
+      "authorship_tag": "ABX9TyPNDB7ZTj+yL4ac3cmk8CYy",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -79,13 +79,13 @@
         "    while len(word_letters) > 0 and lives > 0:\n",
         "        # letters used\n",
         "        # ' '.join(['a', 'b', 'cd']) --> 'a b cd'\n",
-        "        print('You have', lives, 'lives left and you have used these letters: ', ' '.join(used_letters))\n",
+        "        print('Canınız:', lives, 've bu harfleri kullandınız: ', ' '.join(used_letters))\n",
         "\n",
         "        # what current word is (ie W - R D)\n",
         "        word_list = [letter if letter in used_letters else '-' for letter in word]\n",
-        "        print('Current word: ', ' '.join(word_list))\n",
+        "        print('Girdiğiniz harfler: ', ' '.join(word_list))\n",
         "\n",
-        "        user_letter = input('Guess a letter: ').upper()\n",
+        "        user_letter = input('Lüfen bir harf tahmin edin: ').upper()\n",
         "        if user_letter in alphabet - used_letters:\n",
         "            used_letters.add(user_letter)\n",
         "            if user_letter in word_letters:\n",
@@ -97,16 +97,16 @@
         "                print('\\nYour letter,', user_letter, 'is not in the word.')\n",
         "\n",
         "        elif user_letter in used_letters:\n",
-        "            print('\\nYou have already used that letter. Guess another letter.')\n",
+        "            print('\\nBu harfi zaten tahmin etmiştiniz. Başka bir harf deneyin.')\n",
         "\n",
         "        else:\n",
-        "            print('\\nThat is not a valid letter.')\n",
+        "            print('\\nBu geçerli bir karakter değil.')\n",
         "\n",
         "    # gets here when len(word_letters) == 0 OR when lives == 0\n",
         "    if lives == 0:\n",
-        "        print('Öldünüz, sorry. The word was', word)\n",
+        "        print('Öldünüz, sorry. Bulmanız gereken buydu:', word)\n",
         "    else:\n",
-        "        print('Bravo! You guessed the word', word, '!!')\n",
+        "        print('Bravo! Kelimeyi tahmin etmeyi başardınız:', word, '!!')\n",
         "\n",
         "oyunaGiriş()\n",
         "selamlama()\n",
