--- a/proje02.ipynb
+++ b/proje02.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "proje02.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPNDB7ZTj+yL4ac3cmk8CYy",
+      "authorship_tag": "ABX9TyMusTXicQacshQO1tVJ0QPu",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -94,7 +94,7 @@
         "\n",
         "            else:\n",
         "                lives = lives - 1  # takes away a life if wrong\n",
-        "                print('\\nYour letter,', user_letter, 'is not in the word.')\n",
+        "                print('\\nBu harf,', user_letter, 'kelimede mevcut değil.')\n",
         "\n",
         "        elif user_letter in used_letters:\n",
         "            print('\\nBu harfi zaten tahmin etmiştiniz. Başka bir harf deneyin.')\n",
@@ -114,10 +114,56 @@
         "hangman()"
       ],
       "metadata": {
-        "id": "g5Qk94KYNTiv"
+        "id": "g5Qk94KYNTiv",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "2b93708c-dfb8-404a-8e83-86dcbac483e2"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Kelime oyunu Adam Asmaca oyununa giriş yapmak istiyor musunuz?: Evet/Hayır evet\n",
+            "Adınızı giriniz: m,r\n",
+            "Adam asmaca oyununa hoş geldiniz, m,r !\n",
+            "Oyunun Seviyeleri: 1-Basit 2-Orta 3-İleri\n",
+            "Zorluk seviyesi giriniz: 2\n",
+            "Orta seviyeye hoşgeldiniz! Bu seviyede 5 canınız bulunmaktadır. Kelime zorluğu: 7 harf\n",
+            "Canınız: 7 ve bu harfleri kullandınız:  \n",
+            "Girdiğiniz harfler:  - - - - - - - -\n",
+            "Lüfen bir harf tahmin edin: s\n",
+            "\n",
+            "Canınız: 7 ve bu harfleri kullandınız:  S\n",
+            "Girdiğiniz harfler:  S - - - - - - -\n",
+            "Lüfen bir harf tahmin edin: a\n",
+            "\n",
+            "Canınız: 7 ve bu harfleri kullandınız:  A S\n",
+            "Girdiğiniz harfler:  S A - - A - - -\n",
+            "Lüfen bir harf tahmin edin: n\n",
+            "\n",
+            "Canınız: 7 ve bu harfleri kullandınız:  N A S\n",
+            "Girdiğiniz harfler:  S A N - A - - -\n",
+            "Lüfen bir harf tahmin edin: d\n",
+            "\n",
+            "Canınız: 7 ve bu harfleri kullandınız:  N D A S\n",
+            "Girdiğiniz harfler:  S A N D A - - -\n",
+            "Lüfen bir harf tahmin edin: l\n",
+            "\n",
+            "Canınız: 7 ve bu harfleri kullandınız:  S L N D A\n",
+            "Girdiğiniz harfler:  S A N D A L - -\n",
+            "Lüfen bir harf tahmin edin: y\n",
+            "\n",
+            "Canınız: 7 ve bu harfleri kullandınız:  Y S L N D A\n",
+            "Girdiğiniz harfler:  S A N D A L Y -\n",
+            "Lüfen bir harf tahmin edin: e\n",
+            "\n",
+            "Bravo! Kelimeyi tahmin etmeyi başardınız: SANDALYE !!\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
