--- a/proje03.ipynb
+++ b/proje03.ipynb
@@ -6,7 +6,7 @@
       "name": "proje03.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMkMzOMBuVx1fQ+Gz/AVeTF",
+      "authorship_tag": "ABX9TyPgHAyxbGvHJ2WRwREd6DuQ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -31,6 +31,7 @@
     {
       "cell_type": "code",
       "source": [
+        "#Sadece bonus özelliği yapamadım:(\n",
         "class Soru:\n",
         "     def __init__(self, prompt, answer):\n",
         "          self.prompt = prompt\n",
